--- a/1_Python_Object_and_Data_Structure_Basics/Dictionaries.ipynb
+++ b/1_Python_Object_and_Data_Structure_Basics/Dictionaries.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_name = 'Philip'"
+    "my_dict = {'key1': 'value1', 'key2': 'value2'}"
    ]
   },
   {
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'Philip'"
+       "{'key1': 'value1', 'key2': 'value2'}"
       ]
      },
      "execution_count": 2,
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "my_name"
+    "my_dict"
    ]
   },
   {
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "'Philip is gay'"
+       "'value1'"
       ]
      },
      "execution_count": 3,
@@ -46,24 +46,45 @@
     }
    ],
    "source": [
-    "my_name + ' ' + 'is gay'"
+    "my_dict['key1']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prices_lookup = {'apple': 2.99, 'oranges': 1.50, 'milk': 3.79 }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is a string idiot\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2.99"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('This is a string {}'.format('idiot'))"
+    "prices_lookup['apple']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'k1': 123, 'k2': [0, 1, 3], 'k3': {'insideKey': 100 }}"
    ]
   },
   {
@@ -72,61 +93,98 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The fox fox fox\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'k1': 123, 'k2': [0, 1, 3], 'k3': {'insideKey': 100}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('The {0} {0} {0}'.format('fox', 'brown', 'quick'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The quick brown fox\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('The {q} {b} {f}'.format(f='fox', b='brown', q='quick'))"
+    "d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = 100 / 777"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1287001287001287"
+       "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "d['k2'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['k3']['insideKey']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['k1', 'k2', 'k3'])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([123, [0, 1, 3], {'insideKey': 100}])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.values()"
    ]
   },
   {
@@ -135,78 +193,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The result was 0.13\n"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_items([('k1', 123), ('k2', [0, 1, 3]), ('k3', {'insideKey': 100})])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('The result was {r:1.2f}'.format(r = result))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = 'Jose'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, Jose\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'Hello, {name}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sam is 3 years old\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = 'Sam'\n",
-    "age = 3\n",
-    "\n",
-    "print(f'{name} is {age} years old')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What's happening Gordy, Phil and Ana\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"What's happening {g}, {p} and {a}\".format(g = 'Gordy', p = 'Phil', a = 'Ana'))"
+    "d.items()"
    ]
   },
   {
