--- a/2_Python_Comparison_Operators/Multiple Comparison Operators with Logical Operators.ipynb
+++ b/2_Python_Comparison_Operators/Multiple Comparison Operators with Logical Operators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,53 +11,13 @@
        "True"
       ]
      },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2 == 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
      "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2 == 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'Hello' == 'Bye'"
+    "1 < 2 and 2 < 3"
    ]
   },
   {
@@ -68,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 4,
@@ -77,7 +37,7 @@
     }
    ],
    "source": [
-    "2 == '2'"
+    "1 < 2 < 3"
    ]
   },
   {
@@ -97,7 +57,7 @@
     }
    ],
    "source": [
-    "2.0 == 2"
+    "1 < 2 and 2 < 3"
    ]
   },
   {
@@ -108,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 6,
@@ -117,7 +77,7 @@
     }
    ],
    "source": [
-    "3 != 3"
+    "'h' == 'h' and 2 == 2"
    ]
   },
   {
@@ -137,7 +97,7 @@
     }
    ],
    "source": [
-    "4 != 5"
+    "1 == 1 or 2 == 3"
    ]
   },
   {
@@ -148,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 8,
@@ -157,47 +117,7 @@
     }
    ],
    "source": [
-    "2 > 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 > 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2 >= 2"
+    "not 1 == 1"
    ]
   },
   {
