--- a/3_Python_Statements/For Loops.ipynb
+++ b/3_Python_Statements/For Loops.ipynb
@@ -164,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n"
+      "k1\n",
+      "k2\n",
+      "k3\n"
      ]
     }
    ],
@@ -184,8 +184,8 @@
     "    'k3': 3\n",
     "}\n",
     "\n",
-    "for key, value in d.items():\n",
-    "    print(value)"
+    "for key,value in d.items():\n",
+    "    print(key)"
    ]
   },
   {
