--- a/3_Python_Statements/Useful Operators.ipynb
+++ b/3_Python_Statements/Useful Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,15 +19,20 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "1\n",
       "2\n",
+      "3\n",
       "4\n",
+      "5\n",
       "6\n",
-      "8\n"
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
    "source": [
-    "for num in range(0,10, 2):\n",
+    "for num in range(10):\n",
     "    print(num)"
    ]
   },
@@ -372,11 +377,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number here: 50\n"
+     ]
+    }
+   ],
    "source": [
     "result = input('Enter a number here: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'50'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(result)"
    ]
   },
   {
