--- a/4_Methods_and_Functions/Basics of Python Functions.ipynb
+++ b/4_Methods_and_Functions/Basics of Python Functions.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "30"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,8 +110,7 @@
     "def add_num(num1, num2):\n",
     "    return num1 + num2\n",
     "\n",
-    "addNums = add_num(10, 20)\n",
-    "addNums"
+    "add_num(10, 20)"
    ]
   },
   {
