--- a/4_Methods_and_Functions/Logic with Functions.ipynb
+++ b/4_Methods_and_Functions/Logic with Functions.ipynb
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[2, 8, 10]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
     "def check_even_list(num_list):\n",
     "    return [num for num in num_list if num % 2 == 0]\n",
     "    \n",
-    "check_even_list([1, 3, 5])"
+    "check_even_list([1, 2, 5, 8, 10, 11])"
    ]
   },
   {
