--- a/3_Python_Statements/Useful Operators.ipynb
+++ b/3_Python_Statements/Useful Operators.ipynb
@@ -434,6 +434,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myFunc(val):\n",
+    "    result = []\n",
+    "    \n",
+    "    for i in range(len(val)):\n",
+    "        print(i)\n",
+    "\n",
+    "myFunc('12345')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
