--- a/4_Methods_and_Functions/Function Exercices.ipynb
+++ b/4_Methods_and_Functions/Function Exercices.ipynb
@@ -17,8 +17,8 @@
     }
    ],
    "source": [
-    "# write a function that returns the lesser of two given numbers if both numbers are even\n",
-    "# ,but returns the greater if one or both numbers are odd\n",
+    "# write a function that returns the lesser of two given numbers if both numbers are even ->\n",
+    "# ->, but returns the greater if one or both numbers are odd\n",
     "def lesser_of_two_evens(a, b):\n",
     "    if a % 2 == 0 and b % 2 == 0:\n",
     "        return min(a, b)\n",
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,11 +49,9 @@
     "def animal_crackers(string):\n",
     "    listString = string.lower().split()\n",
     "    \n",
-    "    if listString[0][0] == listString[1][0]:\n",
-    "        return True\n",
-    "    return False\n",
+    "    return listString[0][0] == listString[1][0]\n",
     "\n",
-    "animal_crackers('Phil pie')"
+    "animal_crackers('Phil ie')"
    ]
   },
   {
@@ -125,6 +123,46 @@
    ],
    "source": [
     "makes_twenty(20, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'true'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'' or 'true'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True"
    ]
   },
   {
