map, filter and lambda

--- a/4_Methods_and_Functions/Lambda, Map and Filter.ipynb
+++ b/4_Methods_and_Functions/Lambda, Map and Filter.ipynb
@@ -2,56 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
     }
    ],
    "source": [
-    "# write a function that returns the lesser of two given numbers if both numbers are even ->\n",
-    "# ->, but returns the greater if one or both numbers are odd\n",
-    "def lesser_of_two_evens(a, b):\n",
-    "    if a % 2 == 0 and b % 2 == 0:\n",
-    "        return min(a, b)\n",
-    "    else:\n",
-    "        return max(a, b)\n",
-    "    \n",
-    "lesser_of_two_evens(2, 5)"
+    "nums = [1,2,3,4,5]\n",
+    "\n",
+    "def square(num):\n",
+    "    return num**2\n",
+    "\n",
+    "for item in map(square, nums):\n",
+    "    print(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "[1, 4, 9, 16, 25]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# write a function that takes in a two-word string and returns True if both words begin with the same letter\n",
-    "def animal_crackers(string):\n",
-    "    listString = string.lower().split()\n",
-    "    \n",
-    "    return listString[0][0] == listString[1][0]\n",
-    "\n",
-    "animal_crackers('Phil ie')"
+    "list(map(square, nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def slicer(string):\n",
+    "    if len(string) % 2 == 0:\n",
+    "        return 'Even'\n",
+    "    else:\n",
+    "        return string[0]"
    ]
   },
   {
@@ -60,9 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# given two integers, return True if their sum is 20 or if one of the intergers is 20\n",
-    "def makes_twenty(n1, n2):\n",
-    "    return n1 + n2 == 20 or n1 == 20 or n2 == 20  "
+    "names = ['Andy', 'Eve', 'Sally']"
    ]
   },
   {
@@ -73,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "['Even', 'E', 'S']"
       ]
      },
      "execution_count": 16,
@@ -82,87 +86,127 @@
     }
    ],
    "source": [
-    "makes_twenty(10, 10)"
+    "list(map(slicer, names))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "makes_twenty(1, 3)"
+    "def check_even(num):\n",
+    "    return num % 2 == 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "makes_twenty(20, 1)"
+    "nums = [1,2,3,4,5,6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'true'"
+       "[2, 4, 6]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'' or 'true'"
+    "list(filter(check_even, nums))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "not True"
+    "lambda num: num ** 2\n",
+    "square(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda num: num ** 2, nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda num: num % 2 == 0, nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Andy', 'Eve', 'Sally']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names"
    ]
   },
   {
@@ -170,7 +214,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "map(lambda name: nam)"
+   ]
   }
  ],
  "metadata": {
