nested statements and scope

--- a/4_Methods_and_Functions/Lambda, Map and Filter.ipynb
+++ b/4_Methods_and_Functions/Lambda, Map and Filter.ipynb
@@ -211,12 +211,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'E', 'S']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda name: name[0], names))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "map(lambda name: nam)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
