--- a/4_Methods_and_Functions/Function Exercices - Level Two.ipynb
+++ b/4_Methods_and_Functions/Function Exercices - Level Two.ipynb
@@ -2,17 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# given a list of integers, return True if the array contains a 3 next to another 3\n",
     "# solution 1\n",
     "def has_33(nums):\n",
     "    for i in range(0, len(nums) - 1):\n",
-    "        if num[i] == 3 and num[i + 1] == 3:\n",
+    "        if nums[i] == 3 and nums[i + 1] == 3:\n",
     "            return True\n",
-    "    return False"
+    "    return False\n",
+    "\n",
+    "has_33([1,2,3,4])"
    ]
   },
   {
@@ -92,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -131,13 +144,13 @@
        "11"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summer_69([2, 4, 5, 6, 9])"
+    "summer_69([2, 4, 5, 6, 0, 1, 9, 7])"
    ]
   },
   {
@@ -199,13 +212,6 @@
    "source": [
     "summer_69([2, 3, 4])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
