milestone project_1 warmup: displaying info

--- a/3_Python_Statements/Useful Operators.ipynb
+++ b/3_Python_Statements/Useful Operators.ipynb
@@ -82,19 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "a\n",
-      "2\n",
-      "b\n",
-      "3\n",
-      "c\n"
+      "1 a\n",
+      "2 b\n",
+      "3 c\n"
      ]
     }
    ],
@@ -103,8 +100,7 @@
     "myList2 = ['a', 'b', 'c']\n",
     "\n",
     "for a, b in zip(myList1, myList2):\n",
-    "    print(a)\n",
-    "    print(b)"
+    "    print(a, b)"
    ]
   },
   {
@@ -458,13 +454,6 @@
     "\n",
     "myFunc('12345')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
