--- a/4_Methods_and_Functions/Function Exercices 1.ipynb
+++ b/4_Methods_and_Functions/Function Exercices 1.ipynb
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
     "    \n",
     "    return listString[0][0] == listString[1][0]\n",
     "\n",
-    "animal_crackers('Phil ie')"
+    "animal_crackers('Phil Pie')"
    ]
   },
   {
