--- a/4_Methods_and_Functions/Tuple Unpacking with Functions.ipynb
+++ b/4_Methods_and_Functions/Tuple Unpacking with Functions.ipynb
@@ -140,10 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int('100')"
+   ]
   }
  ],
  "metadata": {
