--- a/5_Milestone_Project-1/Validating User Input.ipynb
+++ b/5_Milestone_Project-1/Validating User Input.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,15 +188,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a number (0-10)100\n",
+      "Please enter a number (0-10)500\n",
       "You're out of range (0 - 10)\n",
+      "Please enter a number (0-10)10\n",
+      "You're out of range (0 - 10)\n",
+      "Please enter a number (0-10)9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_choice()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Please enter a number (0-10)5\n"
      ]
     },
@@ -206,7 +235,7 @@
        "5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,43 +246,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter a number (0-10)'hello'\n",
-      "That is not a digit!\n",
-      "Please enter a number (0-10)'what are you'\n",
-      "That is not a digit!\n",
-      "Please enter a number (0-10)411\n",
-      "You're out of range (0 - 10)\n",
-      "Please enter a number (0-10)1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "user_choice()"
+    "def user_choice():\n",
+    "    \n",
+    "    while True:\n",
+    "        choice = input('Enter a number (0 - 10)')\n",
+    "        \n",
+    "        if choice.isdigit():\n",
+    "            if int(choice) in range(0, 10):\n",
+    "                return int(choice)\n",
+    "\n",
+    "            print('you are out of acceptable range (0 - 10)')\n",
+    "            continue\n",
+    "        \n",
+    "        print(\"That's not a digit!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number (0 - 10)500\n",
+      "you are out of acceptable range (0 - 10)\n",
+      "Enter a number (0 - 10)hell\n",
+      "That's not a digit!\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_choice()"
+   ]
   }
  ],
  "metadata": {
@@ -261,18 +291,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
