--- a/3_Python_Statements/If, Elif and Else Statements.ipynb
+++ b/3_Python_Statements/If, Elif and Else Statements.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +69,38 @@
     "else:\n",
     "    print(\"Who are you?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-3-8bd500705081>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-8bd500705081>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    return(\"You're boo\")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Philip\"\n",
+    "\n",
+    "if name == \"Boo\":\n",
+    "    return\"You're boo\"\n",
+    "elif name == \"Philip\":\n",
+    "    return\"You're the one!\"\n",
+    "\n",
+    "return \"Fuck you\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
