milestone project 1: choose turn function working

--- a/5_Milestone_Project-1/Project.ipynb
+++ b/5_Milestone_Project-1/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,27 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def display_board():\n",
-    "    b = ['X'] * 9\n",
+    "    b = ['X'] * 10\n",
     "    \n",
     "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[6]} ' + f'| {b[7]} |' + f' {b[8]}')\n",
-    "    print(' ___' + '|___|' + '___ ')\n",
+    "    print(f'  {b[7]} ' + f'| {b[8]} |' + f' {b[9]}')\n",
+    "    print('____' + '|___|' + '____')\n",
     "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[3]} ' + f'| {b[4]} |' + f' {b[5]}')\n",
-    "    print(' ___' + '|___|' + '___ ')\n",
+    "    print(f'  {b[4]} ' + f'| {b[5]} |' + f' {b[6]}')\n",
+    "    print('____' + '|___|' + '____')\n",
     "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[0]} ' + f'| {b[1]} |' + f' {b[2]}')\n",
+    "    print(f'  {b[1]} ' + f'| {b[2]} |' + f' {b[3]}')\n",
     "    print('    ' + '|   |' + '    ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,10 +40,10 @@
      "text": [
       "    |   |    \n",
       "  X | X | X\n",
-      " ___|___|___ \n",
+      "____|___|____\n",
       "    |   |    \n",
       "  X | X | X\n",
-      " ___|___|___ \n",
+      "____|___|____\n",
       "    |   |    \n",
       "  X | X | X\n",
       "    |   |    \n"
@@ -52,6 +52,48 @@
    ],
    "source": [
     "display_board()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def choose_turn():\n",
+    "    choices = ['X', 'O']\n",
+    "    mark = None\n",
+    "    \n",
+    "    while mark not in choices:\n",
+    "        mark = input('Player 1, choose X or O: ')\n",
+    "\n",
+    "        if mark == 'X':\n",
+    "            return \"Player One will go first!\"\n",
+    "        elif mark == 'O':\n",
+    "            return \"Player Two will go first!\"\n",
+    "        \n",
+    "        print('Please choose X or O')\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1, choose X or O: df\n",
+      "Please choose X or O\n",
+      "Player 1, choose X or O: x\n",
+      "Please choose X or O\n"
+     ]
+    }
+   ],
+   "source": [
+    "choose_turn()"
    ]
   },
   {
