milestone project 1: ask if player is ready

--- a/5_Milestone_Project-1/Project.ipynb
+++ b/5_Milestone_Project-1/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# game board\n",
     "def display_board():\n",
     "    b = ['X'] * 10\n",
     "    \n",
@@ -31,35 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    |   |    \n",
-      "  X | X | X\n",
-      "____|___|____\n",
-      "    |   |    \n",
-      "  X | X | X\n",
-      "____|___|____\n",
-      "    |   |    \n",
-      "  X | X | X\n",
-      "    |   |    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "display_board()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# choose to go first (X) or second (O)\n",
     "def choose_turn():\n",
     "    choices = ['X', 'O']\n",
     "    mark = None\n",
@@ -72,28 +58,143 @@
     "        elif mark == 'O':\n",
     "            return \"Player Two will go first!\"\n",
     "        \n",
-    "        print('Please choose X or O')\n",
-    "        continue"
+    "        print('Please choose X or O')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1, choose X or O: df\n",
+      "Player 1, choose X or O: 9\n",
       "Please choose X or O\n",
-      "Player 1, choose X or O: x\n",
-      "Please choose X or O\n"
+      "Player 1, choose X or O: a\n",
+      "Please choose X or O\n",
+      "Player 1, choose X or O: X\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Player One will go first!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "choose_turn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "choose_turn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ask player if he/she is ready to play\n",
+    "def ready_play():\n",
+    "    choices = [\"Yes\", \"No\"]\n",
+    "    answer = None\n",
+    "    \n",
+    "    while answer not in choices:\n",
+    "        answer = input(\"Are you ready to play (Yes or No)? \")\n",
+    "        \n",
+    "        if answer == \"Yes\":\n",
+    "            return True\n",
+    "        elif answer == \"No\":\n",
+    "            return False\n",
+    "        \n",
+    "        print(\"Please eneter Yes or No.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are you ready to play (Yes or No)? crap\n",
+      "Please eneter Yes or No.\n",
+      "Are you ready to play (Yes or No)? Yes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ready_play()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tic_tac_toe():\n",
+    "    print(\"Welcome to Tic-Tac-Toe!\")\n",
+    "    \n",
+    "    player = choose_turn()\n",
+    "    ready = ready_play()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Tic-Tac-Toe!\n",
+      "Player 1, choose X or O: a\n",
+      "Please choose X or O\n",
+      "Player 1, choose X or O: X\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ready_player' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-d5912735471a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtic_tac_toe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-6-a37523e7b714>\u001b[0m in \u001b[0;36mtic_tac_toe\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mplayer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchoose_turn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mready\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mready_player\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'ready_player' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tic_tac_toe()"
    ]
   },
   {
