milestone project 1: display_board takes two arguments(position, mark)

--- a/5_Milestone_Project-1/Project.ipynb
+++ b/5_Milestone_Project-1/Project.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# game board\n",
-    "def display_board():\n",
+    "def display_board(position, mark):\n",
     "    b = [' '] * 10\n",
+    "    b[position] = mark\n",
     "    \n",
     "    print('    ' + '|   |' + '    ')\n",
     "    print(f'  {b[7]} ' + f'| {b[8]} |' + f' {b[9]}')\n",
@@ -27,37 +28,22 @@
     "    print('____' + '|___|' + '____')\n",
     "    print('    ' + '|   |' + '    ')\n",
     "    print(f'  {b[1]} ' + f'| {b[2]} |' + f' {b[3]}')\n",
-    "    print('    ' + '|   |' + '    ')"
+    "    print('    ' + '|   |' + '    ')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    |   |    \n",
-      "    |   |  \n",
-      "____|___|____\n",
-      "    |   |    \n",
-      "    |   |  \n",
-      "____|___|____\n",
-      "    |   |    \n",
-      "    |   |  \n",
-      "    |   |    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "display_board()"
+    "display_board(2, 'X')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,32 +56,35 @@
     "        mark = input('Player 1, choose X or O: ')\n",
     "    \n",
     "        if mark == 'X':\n",
-    "            return \"Player One will go first!\"\n",
+    "            print(\"Player One will go first!\")\n",
+    "            break\n",
     "        elif mark == 'O':\n",
-    "            return \"Player Two will go first!\"\n",
-    "        \n",
-    "        print('Please choose X or O')"
+    "            print(\"Player Two will go first!\")\n",
+    "            break\n",
+    "        print('Please choose X or O')\n",
+    "    return mark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1, choose X or O: X\n"
+      "Player 1, choose X or O: X\n",
+      "Player One will go first!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Player One will go first!'"
+       "'X'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,23 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1, choose X or O: O\n"
+      "Player 1, choose X or O: a\n",
+      "Please choose X or O\n",
+      "Player 1, choose X or O: O\n",
+      "Player Two will go first!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Player Two will go first!'"
+       "'O'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,34 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Are you ready to play (Yes or No)? Yes\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ready_play()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,17 +181,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pick your square (1 - 9): 100\n",
-      "That number is out of range (1 - 9)\n",
-      "That't not a digit...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "position()"
    ]
@@ -230,7 +194,7 @@
    "source": [
     "def tic_tac_toe():\n",
     "    print('Welcome to Tic-Tac-Toe')\n",
-    "    print(choose_turn())\n",
+    "    choose_turn()\n",
     "    \n",
     "    if ready_play():\n",
     "        clear_output()\n",
@@ -244,15 +208,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tic_tac_toe()"
+    "range(0, 10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
